[core] fix(HtmlSelect): text color for disabled options in dark mode (#3968)

--- a/packages/core/src/components/html-select/_html-select.scss
+++ b/packages/core/src/components/html-select/_html-select.scss
@@ -85,6 +85,10 @@ Styleguide select
       color: $pt-dark-text-color;
     }
 
+    option:disabled {
+      color: $pt-dark-text-color-disabled;
+    }
+
     &::after {
       color: $pt-dark-icon-color;
     }
